// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (a) contract with a draft (the Save draft / Sign & send row) 1`] = `
{
  "lines": 928,
  "sha256": "45baf34ce147cb1dca555865275876ab84496f80bf1a8957779fdd7328df5e14",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b1) daily-report, new report, jobsite 124 Park Slope (wttr answers) 1`] = `
{
  "lines": 1159,
  "sha256": "0b5dcd4d8f9b34d01ff2ebaff656aec3df78f256184312d143d12b2e293dd382",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b2) daily-report, new report, location 'United States' 1`] = `
{
  "lines": 1159,
  "sha256": "03c91a6115b1244191ef80190250dd62441f65904839a627f45c52958740840b",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c1) construction-ai, tier enterprise (Code Check) 1`] = `
{
  "lines": 831,
  "sha256": "da1d78756b8f7754df2c27980a6d487ffb0fb3d0ffab08ff80d9bb5972edeff2",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c2) construction-ai, tier enterprise (Project Roadmap) 1`] = `
{
  "lines": 796,
  "sha256": "b096ce046a300578c7a1713738dd5e4f0ae20e72a09960b8867c70ae49220e83",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c3) construction-ai, tier pro (Code Check) 1`] = `
{
  "lines": 834,
  "sha256": "1b1b601b3b474f0c17c22fa508f1b5146a7320e831b4a2923d8dcb6b5231503d",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (d) onboarding-paywall 1`] = `
{
  "lines": 442,
  "sha256": "b7a9ec26b87739cee40ec7b10a45617b18952c30451c00b523add9a1dfa934e9",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (e) dev-ar-measure 1`] = `
{
  "lines": 2060,
  "sha256": "167128164f21bc705c825a7ad6887b4ae495b58c992e4514445519a55c49bb92",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (f) WeatherRescheduleModal, fully simulated, mounted alone 1`] = `
{
  "lines": 80,
  "sha256": "26679914b923ba44c289adba54542037bbad29d142acad1ea17c2666475dcd8b",
}
`;
